# ProjectDawn

./: .gitignore  CMakeLists.txt  README.md  vc140.idb
Main/: CMakeLists.txt
Main/Shader/: Lit.frag  Lit.vert
Main/Shader/Debug_/: DebugQuad.frag  DebugQuad.vert
Main/Shader/Shadow/: Caster.frag  Caster.vert
Main/Source/: main.cpp
Main/Source/Core/: Component.h  GameObject.cpp  GameObject.h  Transform.cpp  Transform.h
Main/Source/CustomObject/: FreeCamera.h  LightObject.h
Main/Source/CustomObject/Component/: MovementController.h
Main/Source/Framework/: GameApp.cpp  GameApp.h  Input.h  OpenGLApp.cpp  OpenGLApp.h
Main/Source/Libraries/: Libs.h  OpenGL.h  WinMin.h  glad.c
Main/Source/Libraries/pch/: Libs.cpp  OpenGL.cpp
Main/Source/Rendering/: Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  ModelLoader.cpp  ModelLoader.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  Texture.h
Main/Source/Rendering/ShaderProperty/: CustomPassProperty.cpp  CustomPassProperty.h  LitShader.h
Main/Source/Utility/: CpuTimer.cpp  CpuTimer.h  Utility.h
assimp/samples/SimpleOpenGL/: SimpleOpenGL.sln  SimpleOpenGL.vcxproj
include/KHR/: khrplatform.h
include/glad/: glad.h
include/glfw/: glfw3.h
include/glm/detail/: type_vec1.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp
